--- a/about-us.html
+++ b/about-us.html
@@ -41,7 +41,7 @@
   </header>
     <!--*********************-->
   <div class="asside" id="about-us">
-    <h1>1º Encontro do RPG: ESPADAS E TRONOS</h1>
+    <h1>Nossa História</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum pariatur sit maiores animi cum totam aperiam eos optio aliquid, quos, delectus odio possimus debitis? Vel possimus sit neque distinctio illum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae nostrum facilis, molestias enim asperiores recusandae illo et nobis eligendi, dolores ex officiis a sapiente, reiciendis necessitatibus mollitia unde modi fugiat!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, sit autem qui nobis quo harum! Id sit eos harum. Iste consequatur adipisci eveniet delectus culpa. Cumque dicta fuga possimus veritatis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, tempora numquam veritatis temporibus veniam vel fugit architecto et autem vero tenetur aspernatur aperiam iste sequi at nulla molestias accusamus reiciendis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis natus fuga magni aut in ad voluptas magnam, deleniti, suscipit molestiae quibusdam incidunt enim officiis molestias, veritatis facere fugiat! Voluptate, cumque!</p>
     <div class="text-center rpg"><img src="imagens/todos.jpg" alt=""></div>
