--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="about-us.html">About Us</a>
+                  <a class="nav-link active" href="about-us.html">Sobre</a>
                 </li>
               </ul>
             </div>
@@ -162,7 +162,7 @@
     </div><!--main-content-->
     <div class="bottom">
         <div class="center">
-          <span class="credit">Criado por<a href="https://www.instagram.com/marcossktt1/" target="_blank">Marcos</a>&copy;2021 Todos os direitos reservados</span>
+          <span class="credit">Criado por<a href="https://www.instagram.com/marcos_arme/" target="_blank"> Marcos </a>&copy;2021 Todos os direitos reservados.</span>
         </div>
     </div>
   </footer>
