--- a/about-us.html
+++ b/about-us.html
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">About Us</a>
+                  <a class="nav-link active" href="#">Sobre</a>
                 </li>
               </ul>
             </div>
@@ -104,7 +104,7 @@
     </div><!--main-content-->
     <div class="bottom">
       <div class="center">
-        <span class="credit">Criado por <a href="https://www.instagram.com/marcossktt1/" target="_blank">Marcos</a><span class="far fa-copyright">2021 Todos os direitos reservados</span></span>
+        <span class="credit">Criado por <a href="https://www.instagram.com/marcos_arme/" target="_blank">Marcos</a><span class="far fa-copyright">2021 Todos os direitos reservados</span></span>
       </div>
     </div>
   </footer>
